updated by ralpha

--- a/website-project/composer.json
+++ b/website-project/composer.json
@@ -10,7 +10,8 @@
         "gabordemooij/redbean": "^5.7",
         "league/flysystem": "^3.30",
         "bramus/router": "~1.6",
-        "illuminate/database": "^10.0"
+        "illuminate/database": "^10.0",
+        "cboden/ratchet": "^0.4.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
